Dont proc Jekyll. Compress output of css output. Simplify layout for splash page.

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -39,8 +39,16 @@ $em-base: 16px !default;
 
 // $text-direction: ltr;
 
-// Colors
+//445060
+//829AB5
+//849E91
+//C14543
+//D6D5D1
 
+// Colors
+$background-color: #D6D5D1;
+$primary-color: #829AB5;
+$secondary-color: #445060;
 // $primary-color: #2ba6cb;
 // $secondary-color: #e9e9e9;
 // $alert-color: #c60f13;
