--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -49,6 +49,7 @@ $em-base: 16px !default;
 $background-color: #D6D5D1;
 $primary-color: #829AB5;
 $secondary-color: #445060;
+
 // $primary-color: #2ba6cb;
 // $secondary-color: #e9e9e9;
 // $alert-color: #c60f13;
@@ -108,9 +109,10 @@ $secondary-color: #445060;
 // Grid Variables
 //
 
-// $row-width: emCalc(1000px);
-// $column-gutter: emCalc(30px);
-// $total-columns: 12;
+$total-columns: 12;
+$row-width: emCalc(1440px);
+$column-gutter: emCalc(30px);
+
 
 //
 // Block Grid Variables
