Add zurb social icons. Add icon setup to settings and icons.scss to build css. Add social list to splash and revise css.

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -14,6 +14,7 @@
 @import "foundation/components/clearing";
 @import "compass/css3";
 
+@import "icons";
 @import "site/base";
 @import "site/splash";
 @import "responsive";
