--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -44,6 +44,7 @@ $em-base: 16px !default;
 //849E91
 //C14543
 //D6D5D1
+$highlight-color: #C14543;
 
 // Colors
 $background-color: #D6D5D1;
@@ -185,7 +186,7 @@ $column-gutter: emCalc(30px);
 
 // $anchor-text-decoration: none;
 // $anchor-font-color: $primary-color;
-// $anchor-font-color-hover: darken($primary-color, 5%);
+$anchor-font-color-hover: darken($highlight-color, 5%);
 
 // <hr> element
 
