Add typekit. Mobile css for external links.

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -135,6 +135,7 @@ $column-gutter: emCalc(30px);
 // Heading font styles
 
 // $header-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$header-font-family: "futura-pt";
 // $header-font-weight: bold;
 // $header-font-style: normal;
 // $header-font-color: #222;
