--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -3,9 +3,8 @@
     {% include head.html %}
     <body>
       <div class='container'>
-        
         {{ content }}
-        
-      </div>
+      </div>     
+      {% include analytics.html %}
     </body>
 </html>
