--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,7 +16,7 @@
   <body class="<%= page_classes %>">
     <div class='row wrapper'>
       <section class='sidebar columns small-12 medium-3'>
-        <header>
+        <header class='box'>
           <h1 class='text-left'>
             Jason
             Byck
