--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,29 +1,49 @@
-<% content_for :sidebar do  %>
-  <h2>Sidebar</h2>
-<% end %>
+<div class='row'>
+  <h2>jason byck</h2>
+</div>
 
-<section class='index'>
-  <div class='columns medium-7 small-12 box'>
-    <h2>Hello.</h2>
-    <p>
-    I'm a full-stack software engineer, currently CTO of Quandl, where I am working on the fastest growing financial data platform in the world.
-    </p>
+<div class='row'>
+  <p>
+  I'm a full-stack software engineer, currently CTO of Quandl, where I am working on the fastest growing financial data platform in the world.
+  </p>
+  <p>
+  I've spent the last 9+ years working primarily at Toronto area startups, where I've solved engineering challenges and built products, platforms and teams.
+  </p>
+  <p>
+  I studied Computer Science and Physics at  the University of Toronto, and currently live in Brooklyn with my wife and dog.
+  </p>
+</div>
 
-    <p>
-    I've spent the last 9+ years working primarily at Toronto area startups, where I've solved engineering challenges and built products, platforms and teams.
-    </p>
+<div class='row center'>
+  <ul class='contact'>
+    <li>
+      <a href='https://github.com/jbyck' target='_blank'>
+        <span class='socicon-github' />
+      </a>
+    </li>
+    <li>
+      <a href='https://www.linkedin.com/in/jasonbyck', target='_blank'>
+        <span class='socicon-linkedin' />
+      </a>
+    </li>
+    <li>
+      <a href='https://www.instagram.com/jbyck' target='_blank'>
+        <span class='socicon-instagram' />
+      </a>
+    </li>
+    <li>
+      <a href='https://twitter.com/jbyck' target='_blank'>
+        <span class='socicon-twitter' />
+      </a>
+    </li>
+    <li>
+      <a href='mailto:jason@jasonbyck.com'>
+        <span class='socicon-mail' />
+      </a>
+    </li>
+  </ul>
+</div>
 
-    <p>
-    I'm also part owner of The Blimp Factory - a product and software consulting company I run with my friend Barry.
-    </p>
-
-    <p>
-    I studied Computer Science and Physics at  the University of Toronto, and currently live in Brooklyn with my wife and dog.
-    </p>
-  </div>
-
-  <div class='columns medium-4 small-12 box'>
-    <h2>OK,<br />now what?</h2>
-    <p>If you'd like to get in touch with me, there are a couple of ways</p>
-  </div>
-</section>
+<div class='row center'>
+  <img class='profile' src='/images/profile.jpg' />
+</div>
