--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,23 +8,16 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || 'Jason Byck' %></title>
     <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet'>
+    <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
 
     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag :all %>
   </head>
 
   <body class="<%= page_classes %>">
-    <div class='row wrapper'>
-      <section class='sidebar columns small-12 medium-2'>
-        <h1 class='text-left'>
-          Jason<br />
-          Byck
-        </h1>
-        <img class='profile' src='/images/profile.jpg' />
-      </section>
-      <section class='content columns small-12 medium-9 medium-offset-1'>
-        <%= yield %>
-      </section>
+    <div class='container'>
+      <%= yield %>
     </div>
+    <%= google_analytics_universal_tag unless development? %>
   </body>
 </html>
