--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,9 @@
 <div class='row'>
-  <h2>jason byck</h2>
+  <img class='profile' src='/images/profile.jpg' />
+</div>
+
+<div class='row'>
+  <h1>Jason Byck</h1>
 </div>
 
 <div class='row'>
@@ -10,11 +14,14 @@
   I've spent the last 9+ years working primarily at Toronto area startups, where I've solved engineering challenges and built products, platforms and teams.
   </p>
   <p>
+    I'm also part owner of The Blimp Factory - a product and software consulting company I run with my friend Barry.
+  </p>
+  <p>
   I studied Computer Science and Physics at  the University of Toronto, and currently live in Brooklyn with my wife and dog.
   </p>
 </div>
 
-<div class='row center'>
+<div class='row'>
   <ul class='contact'>
     <li>
       <a href='https://github.com/jbyck' target='_blank'>
@@ -42,8 +49,4 @@
       </a>
     </li>
   </ul>
-</div>
-
-<div class='row center'>
-  <img class='profile' src='/images/profile.jpg' />
 </div>
