--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,16 +8,15 @@
 
 <div class='row'>
   <p>
-  I'm a full-stack software engineer, currently CTO of Quandl, where I am working on the fastest growing financial data platform in the world.
+    I'm a full-stack software developer and engineering manager, currently CTO of Quandl, where I’m working on the premier financial data platform in the world.
   </p>
   <p>
-  I've spent the last 9+ years working primarily at Toronto area startups, where I've solved engineering challenges and built products, platforms and teams.
+    I’ve spent my career working at Toronto area technology companies, primarily startups, where I’ve solved engineering challenges and helped build products, platforms and teams.
+  <p>
+    I studied Computer Science and Physics at University of Toronto.
   </p>
   <p>
-    I'm also part owner of The Blimp Factory - a product and software consulting company I run with my friend Barry.
-  </p>
-  <p>
-  I studied Computer Science and Physics at  the University of Toronto, and currently live in Brooklyn with my wife and dog.
+    I currently live in Brooklyn with my wife and dog.
   </p>
 </div>
 
