--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,7 +13,7 @@
   <p>
     I’ve spent my career working at Toronto area technology companies, primarily startups, where I’ve solved engineering challenges and helped build products, platforms and teams.
   <p>
-    I studied Computer Science and Physics at University of Toronto.
+    I studied Computer Science and Physics at the University of Toronto.
   </p>
   <p>
     I currently live in Brooklyn with my wife and dog.
