--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,10 +8,14 @@
 
 <div class='row'>
   <p>
-    I'm a full-stack software developer and engineering manager, currently CTO of Quandl, where I’m working on the premier financial data platform in the world.
+    I’m a full stack software engineer and technical manager with startup experience in FinTech, Marketplaces, APIs and social media platforms.
   </p>
   <p>
-    I’ve spent my career working at Toronto area technology companies, primarily startups, where I’ve solved engineering challenges and helped build products, platforms and teams.
+    I’ve spent the last 8+ years working primarily at startups where I’ve solved engineering challenges, built scalable applications and led productive development teams.
+  </p>
+  <p>
+    I was most recently CTO of Quandl, where I led a team of 17 engineers in building the premier financial data platform and marketplace in the world.
+  </p>
   <p>
     I studied Computer Science and Physics at the University of Toronto.
   </p>
